@@ -1,0 +1,5 @@
+# -*- Makefile -*-
+
+PRGNAME = point1
+
+SRC_CC = point1.cc
